# cv-builder

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: tailoring-rules.yaml
data/: master-cv.yaml
jobs/: example.txt
prompts/: job-analysis.md
src/cv_builder/: __init__.py  __main__.py  cli.py  io.py  job.py  models.py  render.py  service.py  tailor.py  validation.py
templates/: senior-engineer.typ
tests/: conftest.py  test_cli.py  test_job.py  test_render.py  test_validation.py
