[project]
name = "cv-builder"
version = "0.1.0"
description = "Local, evidence-based CV tailoring and Typst rendering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.28.1",
  "pydantic>=2.10.6",
  "pyyaml>=6.0.2",
  "typer>=0.15.1",
]

[project.scripts]
cv = "cv_builder.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "ruff>=0.9.4",
  "types-pyyaml>=6.0.12.20241230",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["cv_builder"]

